--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/axios": "^0.14.0",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-auth": "^0.4.1",
+    "react-google-login": "^5.2.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
+    "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
+    "use-long-press": "^1.1.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -39,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.19"
   }
 }
