--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "react-toastify": "^8.1.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
