--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@types/axios": "^0.14.0",
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^27.0.1",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-auth": "^0.4.1",
