--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/socket.io-client": "^3.0.0",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "jwt-decode": "^3.1.2",
@@ -26,6 +27,7 @@
     "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.1.0",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
     "use-long-press": "^1.1.2",
